fix: fix menu is overlapped by lecture item

--- a/src/pages/UserPage/pages/TimetablePage/components/Timetable/TimetableColumn.module.scss
+++ b/src/pages/UserPage/pages/TimetablePage/components/Timetable/TimetableColumn.module.scss
@@ -13,7 +13,6 @@
     position: absolute;
     box-sizing: border-box;
     margin: -1px;
-    z-index: 1;
   }
 
   .timesWrapper {
